# color-swapper

./: .actrc  .gitignore  Cargo.toml  README.md  config.json
.github/scripts/: pre-build.sh
.github/workflows/: build.yml  release.yml  rust.yml
src/: main.rs
src/helpers/: config.rs  converter.rs  file.rs  program.rs  svg.rs  swapper.rs
